--- a/data-dex/src/app/pokemon-list/pokemon-list.component.html
+++ b/data-dex/src/app/pokemon-list/pokemon-list.component.html
@@ -1,8 +1,26 @@
 <div class="box" *ngFor="let pokemon of pokemons">
   <div class="pokemon-box">
-    <img [src]="pokemon.sprites.front_default">
-    <h1>{{ pokemon.name}}</h1>
+    <div class="left">
+
+      <div class="top">
+
+        <span class="id">{{pokemon.id}}</span>
+        <h1>{{ pokemon.name}}</h1>
+
+      </div>
+
+      <div class="bottom">
+
+          <span class="type" *ngFor="let type of pokemon.types">{{ type.type.name }} </span>
+
+      </div>
+
+    </div>
+
+    <div class="right">
+      <img src="https://img1.freepng.fr/20171220/ofw/star-png-image-5a3a7e9651e390.02167008151378293433541614.jpg" alt="like" class="start">
+      <img class="pokeimg" [src]="pokemon.sprites.front_default">
+    </div>
+
   </div>
 </div>
-
-
