improved layout but still need work

--- a/data-dex/src/app/pokemon-list/pokemon-list.component.html
+++ b/data-dex/src/app/pokemon-list/pokemon-list.component.html
@@ -4,7 +4,7 @@
 
       <div class="top">
 
-        <span class="id">{{pokemon.id}}</span>
+        <span class="id">#{{pokemon.id}}</span>
         <h1>{{ pokemon.name}}</h1>
 
       </div>
