--- a/data-dex/src/app/navbar/navbar.component.html
+++ b/data-dex/src/app/navbar/navbar.component.html
@@ -2,10 +2,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/my-pokemon" routerLinkActive="active">My Pokemons <span class="sr-only">(current)</span></a>
+        <a class="nav-link" routerLink="my-pokemon" routerLinkActive="active">My Pokemons</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="" routerLinkActive="active">Pokedex</a>
+        <a class="nav-link" routerLink="pokedex" routerLinkActive="active">Pokedex</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -14,3 +14,5 @@
     </form>
   </div>
 </nav>
+
+<router-outlet></router-outlet>
