--- a/data-dex/src/app/pokemon-list/pokemon-list.component.html
+++ b/data-dex/src/app/pokemon-list/pokemon-list.component.html
@@ -11,18 +11,18 @@
 
       <div class="bottom">
 
-          <span class="type" *ngFor="let type of pokemon.types">{{ type.type.name }} </span>
+        <span class="type" *ngFor="let type of pokemon.types">{{ type.type.name }} </span>
 
       </div>
 
     </div>
 
     <div class="right">
-      <img src="https://img1.freepng.fr/20171220/ofw/star-png-image-5a3a7e9651e390.02167008151378293433541614.jpg" alt="like" class="start">
+      <img src="https://img1.freepng.fr/20171220/ofw/star-png-image-5a3a7e9651e390.02167008151378293433541614.jpg"
+        alt="like" class="start">
       <img class="pokeimg" [src]="pokemon.sprites.front_default">
     </div>
 
   </div>
 </div>
 
-<router-outlet></router-outlet>
