--- a/data-dex/src/app/pokemon-list/pokemon-list.component.scss
+++ b/data-dex/src/app/pokemon-list/pokemon-list.component.scss
@@ -48,7 +48,7 @@
       width: 30%;
       display: flex;
       flex-direction: row;
-      justify-content: end;
+      justify-content: flex-end;
       align-items: center;
 
       .start {
