--- a/data-dex/src/app/navbar/navbar.component.html
+++ b/data-dex/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" routerLink="my-pokemon" routerLinkActive="active">My Pokemons</a>
       </li>
       <li class="nav-item">
