added all types filter

--- a/data-dex/src/app/pokemon-list/pokemon-list.component.html
+++ b/data-dex/src/app/pokemon-list/pokemon-list.component.html
@@ -2,7 +2,7 @@
   <div class="mb-3">
     <label for="pokemonTypeFilterSelect" class="form-label">Filtrer par type :</label>
     <select class="form-control" id="pokemonTypeFilterSelect" (change)="onChange($event)">
-      <option selected disabled value="">Select a type</option>
+      <option selected value="All Types">All types</option>
       <option *ngFor="let type of types">{{ type }}</option>
     </select>
   </div>
